--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             border-radius: 10px;
             width: 800px;
             padding: 0;
-            margin: 10em auto;
             outline: 1px solid linear-gradient(to bottom, #000000, #ffffff);
+            position: absolute;
         }
         
         .window_header {
@@ -73,17 +73,74 @@
             font-size: 1em;
         }
 
+        .taskbar {
+            background-image: linear-gradient(to bottom, blue, rgb(16, 16, 252) );
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            height: 40px;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+        }
+
+        .taskbar_start_button {
+            background-image: linear-gradient(to bottom, rgb(0, 59, 0), green );
+            height: 100%;
+            width: 120px;
+            border-bottom-right-radius: 10px;
+            border-top-right-radius: 10px;
+            font-size: 1.5em;
+            font-weight: bold;
+            color: white;
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+        }
+
+        .start_icon{
+            background-image: url("https://upload.wikimedia.org/wikipedia/ka/thumb/e/e4/Windows_logo_-_2002.svg/2316px-Windows_logo_-_2002.svg.png");
+            background-size: 100%;
+            background-repeat: no-repeat;
+            height: 35px;
+            margin-right: 0.25em;
+            aspect-ratio: 1/1;
+        }
+
+        .taskbar_contex_menu {
+            background-image: linear-gradient(to bottom, rgb(61, 113, 255), rgb(61, 113, 255));
+            height: 100%;
+            width: 255px;
+            border: 1px solid rgb(92, 136, 255);
+            margin-right: 0;
+            margin-left: auto;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+
+        #clock{
+            font-size: 1.5em;
+            font-weight: bold;
+            color: white;
+        }
+
         body {
             background-image: url("https://pyxis.nymag.com/v1/imgs/a8f/847/fd0dbd5133682072919e9b938bb35d1ff9-11-windows-xp-bliss.jpg");
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
     </style>
 </head>
 
 <body>
-    <div class="window">
-        <div class="window_header">
+    <div class="window" id="window">
+        <div class="window_header" id="window_header">
             <h1>Quinto Exercício</h1>
             <div class="window_header_icon red"> X </div>
             <div class="window_header_icon blue"> ❏ </div>
@@ -99,6 +156,15 @@
                 <label for="data">O nome do estado é:</label>
                 <input id="nome" name="data"></input>
             </div>
+        </div>
+    </div>
+    <div class="taskbar">
+        <div class="taskbar_start_button">
+            <div class="start_icon"></div>
+            Start
+        </div>
+        <div class="taskbar_contex_menu">
+            <span id="clock"> 00:00</span>
         </div>
     </div>
 </body>
