--- a/index.html
+++ b/index.html
@@ -55,10 +55,13 @@
                 "Muito obrigado por utilizar nosso serviço!"
             </p>
             <script defer>
-                window.onload = () => {
-                    const outputTableElem = document.getElementById("output");
-                    const valorInicialElem = document.getElementById("valor_inicial");
-                    const jurosAoAnoElem = document.getElementById("juros_ao_ano");
+                const outputTableElem = document.getElementById("output");
+                const valorInicialElem = document.getElementById("valor_inicial");
+                const jurosAoAnoElem = document.getElementById("juros_ao_ano");
+
+                valorInicialElem.addEventListener("change", update);
+                jurosAoAnoElem.addEventListener("change", update);
+                const update = () => {
 
                     const currentYear = new Date().getFullYear();
 
@@ -79,9 +82,8 @@
                         yearCell.innerText = year;
                         valorCell.innerText = valor.toFixed(2);
                         // percent diference between the first year and the current year
-                        jurosCell.innerText = `${
-                            ((valor - valorInicialElem.value) / valorInicialElem.value * 100).toFixed(2)
-                        }%`;
+                        jurosCell.innerText = `${((valor - valorInicialElem.value) / valorInicialElem.value * 100).toFixed(2)
+                            }%`;
 
                         row.appendChild(yearCell);
                         row.appendChild(valorCell);
@@ -91,6 +93,7 @@
                     }
                 }
 
+                update();
             </script>
         </div>
     </div>
